Fix compile errors in existing metadata unit tests